[gd_scene load_steps=18 format=4 uid="uid://g7k8ghi6h11b"]

[ext_resource type="Script" path="res://scenes/Sand.gd" id="1_4br8h"]
[ext_resource type="PackedScene" uid="uid://bc2fujtl13g10" path="res://scenes/Player.tscn" id="1_kmee1"]
[ext_resource type="Texture2D" uid="uid://76hi8rt1miuo" path="res://assets/kenney_platformerpack/Spritesheets/spritesheet_gr_grass.png" id="2_d6ao8"]
[ext_resource type="Texture2D" uid="uid://1cmkdw30hlrq" path="res://assets/kenney_platformerpack/Spritesheets/spritesheet_gr_snow.png" id="3_8ra1a"]
[ext_resource type="PackedScene" uid="uid://di8pps0plmn1r" path="res://scenes/AreaTrigger.tscn" id="4_08qh4"]
[ext_resource type="Texture2D" uid="uid://waka2vnagn14" path="res://assets/kenney_platformerpack/Spritesheets/spritesheet_gr_sand.png" id="5_5fql6"]
[ext_resource type="Texture2D" uid="uid://chgqimvh7rdh6" path="res://assets/Familiar Looking Rocket.png" id="7_5pmwt"]
[ext_resource type="Script" path="res://scenes/Spawner.gd" id="8_yguhk"]
[ext_resource type="PackedScene" uid="uid://6efwccgsjhq" path="res://scenes/FallingFish.tscn" id="9_jmefm"]
[ext_resource type="PackedScene" uid="uid://ccytrni6j74pv" path="res://scenes/StingingBee.tscn" id="9_yrfwp"]
[ext_resource type="Script" path="res://scenes/Jebakan.gd" id="11_cc44p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t7of7"]
size = Vector2(825, 579)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2hw14"]
texture = ExtResource("2_d6ao8")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -22.25, 45, -64, 0)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -0.5, 29.75, 45, -64, 64)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -0.5, 64, 64, -64, -21)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -20.5, 11.25, 15, -64, 64)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, 2.75, 64, -64, 64)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, 2.75, 64, -64, 64)
0:1/0 = 0
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 8, -2.25, 10, -64, 10)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 8, -2.25, 10, -64, 10)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 8, -2.25, 10, -64, 10)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 7.25, 10, 64, 64, 2.75, 64, -64, 64)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.75, 0, 64, -64, 64, 64, 2.75, 64, -64, 64)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, 2.75, 64, -64, 64)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, 2.75, 64, -64, 64)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, 2.75, 64, -64, 64)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qen7m"]
texture = ExtResource("3_8ra1a")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -5.5, 64, 64, -64, 64)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, 1.25, 53.5, -64, 10)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, -5.5, 32.75, 40.5, -64, 64)
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0ahln"]
texture = ExtResource("5_5fql6")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0

[sub_resource type="TileSet" id="TileSet_4v76j"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_2hw14")
sources/1 = SubResource("TileSetAtlasSource_qen7m")
sources/2 = SubResource("TileSetAtlasSource_0ahln")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pgf74"]
size = Vector2(126, 186)

[node name="Level2" type="Node2D"]

[node name="Sand" type="Area2D" parent="."]
script = ExtResource("1_4br8h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sand"]
position = Vector2(355.5, 274.5)
shape = SubResource("RectangleShape2D_t7of7")

[node name="Player" parent="." instance=ExtResource("1_kmee1")]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAHAAIAAAAFAAEAAAAIAAEAAAAFAAEAAAAHAAMAAAABAAAAAAAIAAMAAAABAAAAAAAIAAIAAAABAAAAAAAKAAEAAAAEAAEAAAAKAAIAAAABAAAAAAAKAAMAAAABAAAAAAALAAIAAAAEAAEAAAALAAMAAAABAAAAAAAAAAEAAgAAAAAAAAABAAEAAgAAAAAAAAACAAEAAgAAAAAAAAAEAAMAAgAAAAAAAAAFAAMAAgAAAAAAAAAMAAMAAAAAAAAAAAANAAMAAAAAAAAAAAAOAAMAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_4v76j")

[node name="Area2D" parent="." instance=ExtResource("4_08qh4")]
position = Vector2(-160, 1415)
rotation = -1.5708
scale = Vector2(1, 6.105)
sceneName = "LoseScreen"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1785, 144)
texture = ExtResource("7_5pmwt")

[node name="Area2D" parent="Sprite2D" instance=ExtResource("4_08qh4")]
position = Vector2(-94, -146)
sceneName = "WinScreen"

[node name="SpawnerIkan" type="Node2D" parent="."]
script = ExtResource("8_yguhk")
obstacle = ExtResource("9_jmefm")
range1 = 800
range2 = 2000

[node name="SpawnerLebah" type="Node2D" parent="."]
script = ExtResource("8_yguhk")
obstacle = ExtResource("9_yrfwp")
range1 = 800
range2 = 2000

[node name="Jebakan" type="Area2D" parent="."]
script = ExtResource("11_cc44p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jebakan"]
position = Vector2(1597, 434)
shape = SubResource("RectangleShape2D_pgf74")

[connection signal="body_entered" from="Sand" to="Sand" method="_on_Player_body_entered"]
[connection signal="body_exited" from="Sand" to="Sand" method="_on_Player_body_exited"]
[connection signal="body_entered" from="Jebakan" to="Sand" method="_on_jebakan_body_entered"]
